--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="container">
             <div class="row vh-100">
-                <div class="col d-flex justity-content-center flex-column my-5">
+                <div class="col-12 col-md-6 d-flex my-5 justity-content-center flex-column">
                     <div class="text-login">
                         <p>Organize suas finanças de uma forma fácil.</p>
                         <p>Controle seu dinheiro e seus investimentos.</p>
@@ -26,7 +26,7 @@
                         <img src="./assets/images/coins.png" alt="coins image" class="img-fluid d-none d-md-inline coins">
                     </div>
                 </div>
-                <div class="col d-flex justity-content-center flex-column my-5">
+                <div class="col-12 col-md-6 d-flex my-5 justity-content-center flex-column">
                     <div class="container">
                         <div class="row">
                             <div class="col">
