--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/images/nikel-small-logo.png" alt="logo nikel" class="img-fluid">
+                    <img src="./assets/images/nikel-small-logo.png" alt="nikel-logo" class="img-fluid" srcset="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
