--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <p id="link-conta" class="text-center form-text mt-2" data-bs-toggle="modal"
+                                <p id="link-conta" class="text-center mt-2 form-text" data-bs-toggle="modal"
                                     data-bs-target="#register-modal">Ainda não possui conta?<span
                                         class="link-default">Criar uma conta</span></p>
                             </div>
@@ -72,8 +72,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="text-center">
-                                        <img src="./assets/images/growdev-logo.png" alt="logo growdev"
-                                            class="img-fluid">
+                                        <img src="./assets/images/growdev-logo.png" alt="logo growdev" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
