--- a/public/home.html
+++ b/public/home.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col d-flex mt-4 justify-content-end">
                     <div class="text-center">
-                        <img src="./assets/images/coins-small.png" alt="coins">
+                        <img src="./assets/images/coins-small.png" alt="coins" srcset="">
                     </div>
                 </div>
             </div>
